Poprawki ortograficzne i w popupach

--- a/style.css
+++ b/style.css
@@ -293,3 +293,16 @@ html, body {
     font-family: 'Jockey One', sans-serif;
     color: black;
 }
+
+.leaflet-tooltip-own {
+    position: absolute;
+    padding: 4px;
+    background-color: rgba(0, 0, 0, 0.4);
+    border: 0px solid #000;
+    color: #000;
+}
+
+.map__tooltip {
+    background: green;
+    border: 2px solid cyan
+}
