--- a/BikeSite/Views/Shared/_Layout.cshtml
+++ b/BikeSite/Views/Shared/_Layout.cshtml
@@ -14,8 +14,8 @@
     <script src="~/src/jquery-3.6.0.min.js"></script>
     <script src="~/src/leaflet.ajax.min.js"></script>
     <script src="~/src/leaflet-providers.js"></script>
-    <script src="~/js/drogi2.js"></script>
-    <script src="~/js/wyzyna.js"></script>
+    <script src="~/js/layers/drogi2.js"></script>
+    <script src="~/js/layers/wyzyna.js"></script>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
 
     <script src="https://unpkg.com/esri-leaflet/dist/esri-leaflet.js"></script>
