--- a/BikeSite/wwwroot/css/style.css
+++ b/BikeSite/wwwroot/css/style.css
@@ -2,9 +2,20 @@
     box-sizing: border-box;
 }
 
+html {
+    width: 100%;
+    height: 100%;
+    display: table;
+}
+
+body {
+    width: 100%;
+    display: table-cell;
+}
+
 html, body {
     margin: 0;
-    height: 100%; /*dodane żeby obrazek w tle był na całym ekranie*/
+    padding: 0;
 }
 /* NAVIGATION */
 
@@ -21,6 +32,7 @@ html, body {
     ;
     font-family: 'Jockey One', sans-serif;
     border-bottom: 1px solid rgb(64,48,23);
+    height: 10vh;
 }
 
 .logo__picture {
@@ -45,6 +57,15 @@ html, body {
     margin: 0 auto;
 }
 
+.tab {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-self: center;
+    justify-content: space-around;
+}
+
 .list__el {
     display: flex;
     justify-content: center;
@@ -59,7 +80,6 @@ html, body {
     text-decoration: none;
     text-align: center;
     border-radius: 15px;
-    color: black;
 }
 
     .list__link:hover {
@@ -86,7 +106,7 @@ html, body {
 .content {
     display: grid;
     background-image: url("/img/log-background.jpg");
-    height: 100%; /*dodane żeby obrazek w tle był na całym ekranie*/
+    /*height: 100%;  dodane żeby obrazek w tle był na całym ekranie*/
 }
 
 .content--map {
@@ -100,8 +120,56 @@ html, body {
     background-color: green;
 }
 
+/* PANEL KART + SEARCHING */
 
-/* SEARCHING */
+
+.tab__panel {
+    transition: opacity 1s ease-out;
+    display: block;
+    opacity: 0;
+    height: 0;
+    overflow: hidden;
+}
+
+    .tab__panel.tab__active {
+        display: block;
+        opacity: 1;
+        height: auto;
+    }
+
+
+/*
+@keyframes fade-in {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+
+*/
+
+.tab__header {
+    display: block;
+    text-decoration: none;
+    font-weight: bold;
+    border: 2px solid black;
+    border-radius: 10px;
+    color: white;
+    padding: 10px;
+}
+
+.tab__li {
+    background-color: #800000;
+    border-radius: 10px;
+    width: 90px;
+    text-align: center;
+}
+
+    .tab__li.tab__active {
+        background-color: green;
+    }
 
 .panel {
     background-color: rgb(255,248,220);
@@ -112,14 +180,15 @@ html, body {
 
 .panel__header {
     margin-top: 50px;
+    margin-bottom: 40px;
     text-align: center;
     text-transform: uppercase;
     font-size: 30px;
 }
 
 .search {
-    display: grid;
-    grid-template: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr / 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    transition: 2s;
+    height: 79vh;
 }
 
 .search__header {
@@ -146,9 +215,9 @@ html, body {
     font-family: 'Barlow', sans-serif;
 }
 
-.search__button:hover {
-    background-color: #e5e0e0;
-}
+    .search__button:hover {
+        background-color: #e5e0e0;
+    }
 
 .search__button--submit {
     width: 140px;
@@ -205,10 +274,6 @@ html, body {
     background-color: rgb(249,249,249)
 }
 
-.form__google:hover {
-    cursor: pointer;
-}
-
 .form__icon {
     width: 80px;
     align-self: center;
@@ -233,16 +298,23 @@ html, body {
     margin: auto;
 }
 
-/* ARTICLES, OTHER PAGES */
+/* MAPA -> plik map.js  */
 
-.header {
-    text-align:center;
-    margin-top: 50px;
-    margin-bottom:50px;
+.text__popup {
+    size: 20px;
+    font-family: 'Jockey One', sans-serif;
+    color: black;
 }
 
-.account__container {
-    margin-left:auto;
-    margin-right:auto;
-    margin-top:50px;
+.leaflet-tooltip-own {
+    position: absolute;
+    padding: 4px;
+    background-color: rgba(0, 0, 0, 0.4);
+    border: 0px solid #000;
+    color: #000;
+}
+
+.map__tooltip {
+    background: green;
+    border: 2px solid cyan
 }
