--- a/BikeSite/Views/Shared/_Layout.cshtml
+++ b/BikeSite/Views/Shared/_Layout.cshtml
@@ -20,6 +20,9 @@
     <link rel="stylesheet" href="~/src/leaflet-mapkey/MapkeyIcons.css">
     <script src="https://apis.google.com/js/platform.js" async defer></script>
 
+    <link rel="stylesheet" href="~/src/geoman/leaflet-geoman.css">
+    <script src="~/src/geoman/leaflet-geoman.min.js"></script>
+
     <script src="https://unpkg.com/leaflet.vectorgrid@latest/dist/Leaflet.VectorGrid.bundled.js"></script>
     <script src="https://unpkg.com/leaflet.vectorgrid@latest/dist/Leaflet.VectorGrid.js"></script>
 
