--- a/BikeSite/Views/Home/Index.cshtml
+++ b/BikeSite/Views/Home/Index.cshtml
@@ -17,30 +17,30 @@
                 <form>
                     <label class="search__header">Długość: </label></br>
                     <div class="search__options">
-                        <button class="search__button" id="len" value="length-1">
+                        <button class="panel__button" id="len" value="length-1">
                             <30km
-                        </button> <button class="search__button" id="len" value="length-2">
+                        </button> <button class="panel__button" id="len" value="length-2">
                             31-50 km
                         </button>
-                        <button class="search__button" id="len" value="length-3">51-80 km</button>
-                        <button class="search__button" id="len" value="length-4">81-100 km</button>
-                        <button class="search__button" id="len" value="length-5">>100 km</button></br>
+                        <button class="panel__button" id="len" value="length-3">51-80 km</button>
+                        <button class="panel__button" id="len" value="length-4">81-100 km</button>
+                        <button class="panel__button" id="len" value="length-5">>100 km</button></br>
                     </div>
                     <label class="search__header">Poziom trudności: </label></br>
                     <div class="search__options">
-                        <button class="search__button">Łatwa</button>
-                        <button class="search__button">Średnia</button>
-                        <button class="search__button">Trudna</button></br>
+                        <button class="panel__button">Łatwa</button>
+                        <button class="panel__button">Średnia</button>
+                        <button class="panel__button">Trudna</button></br>
                     </div>
                     <label class="search__header">Nawierzchnia: </label></br>
                     <div class="search__options">
-                        <button class="search__button">Asfalt</button>
-                        <button class="search__button">Leśne ścieżki</button>
-                        <button class="search__button">Mieszana</button>
+                        <button class="panel__button">Asfalt</button>
+                        <button class="panel__button">Leśne ścieżki</button>
+                        <button class="panel__button">Mieszana</button>
                     </div>
                     <div class="search_options search__options--submit">
                         <img class="search__img" src="img/compass.png">
-                        <button class="search__button search__button--submit">Szukaj</button>
+                        <button class="panel__button panel__button--submit">Szukaj</button>
                     </div>
                 </form>
             </div>
@@ -48,8 +48,10 @@
         <div class="tab__panel" id="tab2">
             <div class="search">
                 <h3 class="panel__header">Dodaj trasę</h3>
-                <button>Rysuj</button>
+                <button class="panel__button draw__button">Rysuj</button>
+                <button class="panel__button finish__button">Zakończ</button>
                 <h3>Opis</h3>
+                <h2>Długość: </h2>
 
             </div>
         </div>
@@ -71,3 +73,4 @@
 </div>
 <script type="text/javascript" src="~/js/map.js"></script>
 <script type="text/javascript" src="~/js/panel.js"></script>
+<script type="text/javascript" src="~/js/drawing.js"></script>
