--- a/BikeSite/Views/Shared/_Layout.cshtml
+++ b/BikeSite/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
     <script src="~/js/layers/museum.js"></script>
     <script src="~/js/layers/restaurant.js"></script>
     <script src="~/js/layers/shop.js"></script>
-    <script src="~/js/layers/shop.js"></script>
+    <script src="~/js/layers/toilet.js"></script>
     <script src="~/js/layers/tourist_info.js"></script>
     <script src="~/js/layers/tower.js"></script>
     <script src="~/js/layers/maska.js"></script>
