--- a/BikeSite/wwwroot/css/style.css
+++ b/BikeSite/wwwroot/css/style.css
@@ -229,6 +229,54 @@ html, body {
     width: 150px;
 }
 
+
+/* Panel rysowania */
+
+
+.draw__start {
+    margin-top: 50px;
+    margin-bottom: 40px;
+}
+
+.panel__length {
+    display: inline-block;
+    margin-left: 30px;
+}
+
+.draw__form {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    margin-bottom: 15px;
+}
+
+.draw__label {
+    font-weight: bold;
+}
+
+.draw__input {
+    width: 100%;
+    height: 5vh;
+}
+
+.draw__text {
+    width: 100%;
+    height: 20vh;
+    padding: 10px;
+    font-family: 'Barlow', sans-serif;
+    font-size: 15px;
+}
+
+.draw__submit {
+    display: flex;
+    margin-top: 40px;
+}
+
+.panel__button--save {
+    margin-top: 80px;
+    display: inline-block;
+}
+
+
 /* LOG IN/REGISTER */
 
 .content__log {
